# pcl

./: .gitignore  run.sh  run_all.sh  run_gtpose.sh  run_xyz.sh
cmake/: pcl_find_cuda.cmake
gpu/containers/src/: initialization.cpp
gpu/examples/segmentation/src/: seg.cpp
gpu/features/src/: centroid.cu  fpfh.cu  normal_3d.cu  pfh.cu  ppf.cu  principal_curvatures.cu  spinimages.cu  uniq_inds.cu  vfh.cu
gpu/kinfu/tools/: CMakeLists.txt  evaluation.cpp  kinfu_app.cpp
gpu/kinfu_compatible/: CMakeLists.txt
gpu/kinfu_compatible/src/: internal.h
gpu/kinfu_compatible/src/cuda/: bilateral_pyrdown.cu  marching_cubes.cu
gpu/kinfu_compatible/tools/: CMakeLists.txt  kinfu_app.cpp  tsdf_volume.h
gpu/kinfu_large_scale/src/: internal.h
gpu/kinfu_large_scale/src/cuda/: colors.cu  coresp.cu  image_generator.cu  maps.cu  normals_eigen.cu  tsdf_volume.cu
gpu/kinfu_large_scale/tools/: color_handler.h  kinfuLS_app.cpp  kinfu_app_sim.cpp  process_kinfu_large_scale_output.cpp  record_maps_rgb.cpp
gpu/kinfu_large_scale_noise_modeling/: CMakeLists.txt
gpu/kinfu_large_scale_noise_modeling/src/: kinfu.cpp  tsdf_volume.cpp
gpu/kinfu_large_scale_noise_modeling/src/cuda/: bilateral_pyrdown.cu  estimate_combined.cu  estimate_tranform.cu  extract.cu  marching_cubes.cu  pointer_shift.cu  push.cu  ray_caster.cu
gpu/kinfu_large_scale_noise_modeling/tools/: evaluation.h  record_tsdfvolume.cpp  standalone_texture_mapping.cpp
gpu/kinfu_noise_modeling/: CMakeLists.txt
gpu/kinfu_noise_modeling/src/: internal.h  kinfu.cpp  tsdf_volume.cpp
gpu/kinfu_noise_modeling/src/cuda/: bilateral_pyrdown.cu  colors.cu  coresp.cu  device.hpp  estimate_combined.cu  extract.cu  image_generator.cu  normals_eigen.cu  ray_caster.cu  tsdf_volume.cu
gpu/kinfu_noise_modeling/tools/: CMakeLists.txt  evaluation.cpp  kinfu_app.cpp  kinfu_app_sim.cpp  record_tsdfvolume.cpp  tsdf_volume.h
gpu/kinfu_noise_modeling_debug/: CMakeLists.txt
gpu/kinfu_noise_modeling_debug/src/: kinfu.cpp
gpu/kinfu_noise_modeling_debug/src/cuda/: marching_cubes.cu
gpu/kinfu_noise_modeling_debug/tools/: CMakeLists.txt  evaluation.h  kinfu_app.cpp
gpu/kinfu_noise_modeling_zivid/: CMakeLists.txt
gpu/kinfu_noise_modeling_zivid/src/: kinfu.cpp
gpu/kinfu_noise_modeling_zivid/src/cuda/: extract.cu  maps.cu
gpu/kinfu_noise_modeling_zivid/tools/: CMakeLists.txt  camera_pose.h  kinfu_app.cpp  record_tsdfvolume.cpp  tsdf_volume.h  volume_related.h
gpu/kinfu_zivid/: CMakeLists.txt  CMakeLists.txt.tmp
gpu/kinfu_zivid/src/cuda/: estimate_tranform.cu  tsdf_volume.cu
gpu/kinfu_zivid/tools/: CMakeLists.txt  camera_pose.h  kinfu_app.cpp
gpu/kinfu_zivid_fahira/: CMakeLists.txt
gpu/kinfu_zivid_fahira/src/: color_volume.cpp  internal.h  kinfu_z.cpp  marching_cubes.cpp  raycaster.cpp  tsdf_volume.cpp
gpu/kinfu_zivid_fahira/src/cuda/: bilateral_pyrdown.cu  bilinear.txt  device.hpp  estimate_combined.cu  estimate_tranform.cu  extract.cu  maps.cu  marching_cubes.cu  noise_data.h  noise_data_ransac_fitted_plane_noise.h  normals_eigen.cu  tsdf_volume.cu  tsdf_volume1.txt  utils.hpp
gpu/kinfu_zivid_fahira/tools/: CMakeLists.txt  bilinear_interpolate_functions.cpp  bilinear_interpolate_main.cpp  capture_zivid.cpp  evaluation_zivid.cpp  evaluation_zivid.h  kinfu_app_zivid.cpp  kinfu_app_zivid_.cpp  mesh_it.cpp  openni_capture_zivid.h  record_tsdfvolume_zivid.cpp  tsdf_volume_zivid.h  tsdf_volume_zivid.hpp
gpu/octree/src/cuda/: approx_nsearch.cu  bfrs.cu  knn_search.cu  octree_builder.cu  octree_host.cu  radius_search.cu
gpu/people/src/: internal.h  people_detector.cpp
gpu/people/src/cuda/: elec.cu  multi_tree.cu  prob.cu  shs.cu  smooth.cu  utils.cu
gpu/people/src/cuda/nvidia/: NCV.cu  NCVHaarObjectDetection.cu  NCVPyramid.cu  NPP_staging.cu
gpu/people/tools/: people_app.cpp  people_pcd_prob.cpp
gpu/surface/src/cuda/: convex_hull.cu
gpu/tracking/src/cuda/: particle_filter.cu
gpu/utils/src/: repacks.cu
io/include/pcl/io/: pcd_grabber.h
io/src/: image_grabber.cpp  pcd_grabber.cpp
(+38 files in other folders)
